# ViTEraser

./: README.md  inference.py  main_segmim.py  pyproject.toml  webui.py
models/: vgg16.py  viteraser.py
models/decoder/: swinv2_decoder.py
models/encoder/: swin_transformer_v2.py  swinv2_encoder.py
scripts/segmim/: viteraser-base-encoder-finetune.sh  viteraser-base-segmim.sh  viteraser-small-encoder-finetune.sh  viteraser-small-segmim.sh  viteraser-tiny-encoder-finetune.sh  viteraser-tiny-segmim.sh
scripts/viteraser-training-withsegmim/: viteraser-base-train-withsegmim.sh  viteraser-small-train-withsegmim.sh  viteraser-tiny-train-withsegmim.sh
scripts/viteraser-training-wosegmim/: viteraser-base-train.sh  viteraser-small-train.sh  viteraser-tiny-train.sh
utils/: checkpointer.py  parser.py
